; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_file.c_file_flush.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_file.c_file_flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GET_FILE_OBJ = common dso_local global i32 0, align 4
@fd = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"open a file first\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @file_flush to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @file_flush(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32, i32* @GET_FILE_OBJ, align 4
  %5 = load i32, i32* @fd, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %10, label %7

7:                                                ; preds = %1
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @luaL_error(i32* %8, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  store i32 %9, i32* %2, align 4
  br label %21

10:                                               ; preds = %1
  %11 = load i32, i32* @fd, align 4
  %12 = call i64 @vfs_flush(i32 %11)
  %13 = icmp eq i64 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %10
  %15 = load i32*, i32** %3, align 8
  %16 = call i32 @lua_pushboolean(i32* %15, i32 1)
  br label %20

17:                                               ; preds = %10
  %18 = load i32*, i32** %3, align 8
  %19 = call i32 @lua_pushnil(i32* %18)
  br label %20

20:                                               ; preds = %17, %14
  store i32 1, i32* %2, align 4
  br label %21

21:                                               ; preds = %20, %7
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local i32 @luaL_error(i32*, i8*) #1

declare dso_local i64 @vfs_flush(i32) #1

declare dso_local i32 @lua_pushboolean(i32*, i32) #1

declare dso_local i32 @lua_pushnil(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
